src/index.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-size: 10px;
}


.section-helper {
  min-height: 100vh;
  padding: 12.8rem 0;
}


// ******************** NAVIGATION ************************

.navigation-section #close-menu-icon {
   display: none;
}

.navigation-section button.mobile-menu-button {
  display: none;
  position: absolute;
  top: 3rem;
  right: 3rem;
  font-size: 6.2rem;
  background: none;
  border: none;
}







.container {
  width: 80vw;
  margin: 0 auto;
}

body {
  color: #495057;
}

h1 {
  font-size: 6.3vw;
}

h2 {
  font-size: 5.8676vw;
}

p {
  font-size: 2.8rem;
}

li:not(.skill) {
  font-size: 2.6rem;
}

li.skill {
  font-size: 1.6rem;
}

div h2,
div h1:not(.intro-title),
div h3 {
  margin-bottom: 9.375vw;
}

